[gd_scene load_steps=6 format=1]

[ext_resource path="res://scripts/Skell.gd" type="Script" id=1]
[ext_resource path="res://textures/Skell_Idle.tex" type="Texture" id=2]
[ext_resource path="res://animations/Skell_Idle.tres" type="Animation" id=3]
[ext_resource path="res://animations/Skell_Run.tres" type="Animation" id=4]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 10.0
height = 20.0

[node name="Skell" type="KinematicBody2D" groups=[
"BadGuy",
]]

transform/pos = Vector2( -0.0626717, 0 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -0.231964, 1.73973 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

transform/pos = Vector2( -0.231964, 1.73973 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Skell_Idle" type="Sprite" parent="."]

transform/pos = Vector2( 3.72529e-08, 0 )
texture = ExtResource( 2 )
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Skell_Idle = ExtResource( 3 )
anims/Skell_Run = ExtResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "Skell_Idle"

[node name="rayWall" type="RayCast2D" parent="."]

transform/pos = Vector2( 5.91507, 16.4694 )
enabled = true
cast_to = Vector2( 5, 0 )
layer_mask = 1
type_mask = 15

[node name="rayFloor" type="RayCast2D" parent="."]

transform/pos = Vector2( 7.45058e-09, 20.453 )
enabled = true
cast_to = Vector2( 0, 3 )
layer_mask = 1
type_mask = 15

[node name="rayForward" type="RayCast2D" parent="."]

transform/pos = Vector2( 2.15964, 15.2993 )
enabled = true
cast_to = Vector2( 10, 10 )
layer_mask = 1
type_mask = 15


